<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0"
    tools:context=".VVPActivity">

    <Button
        android:id="@+id/vendorBttn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="124dp"
        android:background="@drawable/custom_textbox2"
        android:text="@string/VendorBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/DropOff"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="288dp"
        android:background="@drawable/custom_textbox2"
        android:text="@string/DropOff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/citizenBttn2"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="208dp"
        android:background="@drawable/custom_textbox2"
        android:text="@string/CitizenBttn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/volunBttn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="380dp"
        android:background="@drawable/custom_textbox2"
        android:text="@string/VolunteerBttn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/backBttn"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/custom_button"
        android:text="@string/BackBttn"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="GO BACK" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="274dp"
        android:layout_height="427dp"
        android:layout_marginStart="63dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="312dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/DropOff"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo2" />

</androidx.constraintlayout.widget.ConstraintLayout>